Add conclusion to simple-win-pred nb

--- a/win-prediction-10mins.ipynb
+++ b/win-prediction-10mins.ipynb
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ca3b93ad",
+   "id": "f4af7ba2",
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +961,10 @@
    "id": "9ffb6fd3",
    "metadata": {},
    "source": [
-    "From the result, it can be seen that each type of classifier can still be improved through hyperparameter tuning, especially for decision tree where the accuracy increases by almost 10%. By the ways, the performance of voting classifier only increases slightly and the model with highest testing accuracy is tuned SVC. "
+    "From the result, it can be seen that each type of classifier can still be improved through hyperparameter tuning, especially for decision tree where the accuracy increases by almost 10%. The top performance of around 73 % accuracy by almost every type of classifiers suggest that the team total stats at 10-min mark might not give enough information for a complete win/lose prediction. This can happen because of the following reasons,\n",
+    "- At 10 minutes, the difference between both team might be still unclear whether which team is leading or losing\n",
+    "- The prediction didn't take team composition (choices of champions in each team) into the consideration\n",
+    "- Even though a team is leading at 10-min mark, the table can still turn as LoL is fairly an unpredictable game where anything can happen"
    ]
   }
  ],
