add images/ fix typos

--- a/win-prediction-10mins.ipynb
+++ b/win-prediction-10mins.ipynb
@@ -453,27 +453,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "f4af7ba2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "127"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(dict.fromkeys(itertools.permutations([1,1,1,1,1,1,1,2,2,2,2,2,2], 7)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f5ec9605",
    "metadata": {},
@@ -558,7 +537,7 @@
    "id": "ca5220d0",
    "metadata": {},
    "source": [
-    "From the graph above, it can be seen that Logistic Regression, SVC, and GNB perform equally well as observed from relatively similar average accuracy of around 73%. Apart fromo that, every model yields similar standard deviation values while decision tree results in the worst performance and accuracy among all 7 architectures."
+    "From the graph above, it can be seen that Logistic Regression, SVC, and GNB perform equally well as observed from relatively similar average accuracy of around 73%. Apart from that, every model yields similar standard deviation values while decision tree results in the worst performance and accuracy among all 7 models."
    ]
   },
   {
@@ -901,9 +880,11 @@
     "                                verbose = False,\n",
     "                                n_jobs = -1)\n",
     "\n",
-    "# cv_voting_hard_tuned = cross_val_score(hard_voting_clf_tuned, X_train_scaled, y_train, cv=5, n_jobs = -1)\n",
-    "# cv_voting_soft_tuned = cross_val_score(soft_voting_clf_tuned, X_train_scaled, y_train, cv=5, n_jobs = -1)\n",
+    "cv_voting_hard_tuned = cross_val_score(hard_voting_clf_tuned, X_train_scaled, y_train, cv=5, n_jobs = -1)\n",
+    "cv_voting_soft_tuned = cross_val_score(soft_voting_clf_tuned, X_train_scaled, y_train, cv=5, n_jobs = -1)\n",
     "\n",
+    "\n",
+    "# Grid Searching VotingClassifiers with different weights combinations\n",
     "print('Grid Searching for Hard Voting Classifiers....')\n",
     "grid_search_hard.fit(X_train_scaled, y_train)\n",
     "y_pred_hard = grid_search_hard.predict(X_test_scaled)\n",
